metadata-retriever/metadata/objects/Defect__c.object
<CustomObject>
    <description>PMO: for testing app, tracking develop bug.
Responsible persons：Samuel Liu</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select Melvin Daguplo or Sabine Jonientz</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Comment__c</fullName>
        <label>Close Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Defect_Category__c</fullName>
        <label>Defect Category</label>
        <picklist>
            <picklistValues>
                <fullName>Environment Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement Workbook Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Case Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defect_description__c</fullName>
        <label>Defect Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Detected_in_Cycle__c</fullName>
        <label>Detected in Cycle</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detected_in_Release__c</fullName>
        <label>Detected in Release</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Detected_in_Version__c</fullName>
        <label>Detected in Version</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Detected_on_Date__c</fullName>
        <label>Detected on Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Country__c</fullName>
        <label>Market / Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1-Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_CRs__c</fullName>
        <label>Related CRs #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Test_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Test Case</label>
        <referenceTo>Test_Cases__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <picklist>
            <picklistValues>
                <fullName>1.1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed and Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reopen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RWB Gap</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Reproducible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <picklist>
            <picklistValues>
                <fullName>LDCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_step1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test step1</label>
        <referenceTo>Test_step1__c</referenceTo>
        <relationshipName>Tickets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testing_Phase__c</fullName>
        <label>Testing Phase</label>
        <picklist>
            <picklistValues>
                <fullName>System Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT W/O Integration</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Testing Round 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Testing Round 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Testing Round 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration Testing Round 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Round 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Round 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Round 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT with Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Integration Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TTT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Defect</label>
    <listViews>
        <fullName>AllNotFixedDefects</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Related_Test_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Open,Reopen,Duplicate</value>
        </filters>
        <filters>
            <field>Defect_Category__c</field>
            <operation>notEqual</operation>
            <value>Change Request,Blocked</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>startsWith</operation>
            <value>Sinow</value>
        </filters>
        <label>All-Not-Fixed-Defects</label>
    </listViews>
    <listViews>
        <fullName>All_Defects</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Testing_Phase__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Related_Test_Case__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>All-Defects</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_CR_UAT_W_O</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Related_CRs__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Detected_on_Date__c</columns>
        <columns>Testing_Phase__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>equals</operation>
            <value>UAT W/O Integration</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>Defect_Category__c</field>
            <operation>equals</operation>
            <value>Change Request</value>
        </filters>
        <label>All Defects - CR - UAT W/O</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_Retest_UAT_W_O_Defects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Detected_on_Date__c</columns>
        <columns>Testing_Phase__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>equals</operation>
            <value>UAT W/O Integration</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Fixed,Deployed,Deployed and Verified</value>
        </filters>
        <label>All Defects - Retest - UAT W/O</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_TTT</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Detected_on_Date__c</columns>
        <columns>Testing_Phase__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>equals</operation>
            <value>TTT</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>All Defects TTT</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_TechIntegration_Test</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Detected_on_Date__c</columns>
        <columns>Testing_Phase__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>System__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>equals</operation>
            <value>Technical Integration Test</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>All Defects TechIntegration Testing</label>
    </listViews>
    <listViews>
        <fullName>All_Defects_UAT_W_O_Defects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Related_CRs__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Detected_on_Date__c</columns>
        <columns>Testing_Phase__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>equals</operation>
            <value>UAT W/O Integration</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>All Defects UAT W/O Defects</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Defects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Priority__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Rejected,Duplicate</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>All Open Defects</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Defects_TechIntegration_Test</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Detected_on_Date__c</columns>
        <columns>Testing_Phase__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>equals</operation>
            <value>Technical Integration Test</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Fixed,Deployed,Deployed and Verified,Closed</value>
        </filters>
        <label>All Open Defects TechIntegration Test</label>
    </listViews>
    <listViews>
        <fullName>Integration_Test</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Defect_Category__c</columns>
        <columns>Defect_description__c</columns>
        <columns>Detected_on_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Testing_Phase__c</field>
            <operation>notEqual</operation>
            <value>,System Testing,UAT</value>
        </filters>
        <filters>
            <field>Market_Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>Integration Test</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Defect#{0000}</displayFormat>
        <label>Defect ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <recordTypes>
        <fullName>HolgerMBAuPIntegration_Test</fullName>
        <active>true</active>
        <description>HolgerData MigrationIntegration</description>
        <label>HolgerMBAuPIntegration Test</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>